# fi18n

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
examples/locales/: global.ftl
examples/locales/en/: intl.ftl  login.ftl  main.ftl  sports.ftl
examples/locales/en-UK/: intl.ftl  overrides.ftl
examples/locales/en-US/: intl.ftl
examples/locales/pt/: intl.ftl  login.ftl  main.ftl  sports.ftl
examples/locales/pt-BR/: intl.ftl  sports.ftl
examples/locales/pt-PT/: intl.ftl
locales/en/: login.ftl  movie.ftl  sports.ftl
locales/en/UK/: overrides.ftl
locales/en/US/: overrides.ftl
locales/pt/: login.ftl
locales/pt/BR/: overrides.ftl
src/: actix.rs  error.rs  fkey.rs  fsource.rs  lib.rs  load.rs  machine.rs
src/builders/: inheritance.rs  machine_build.rs  mod.rs
src/loaders/: directory_loader.rs  inheritance_loader.rs  mod.rs
test_data/en/: bad.ftl  indent.ftl  other.ftl
