[package]
name = "fi18n"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dvdmgl/fi18n.git"
authors = ["David Miguel <dvdmgl@gmail.com>"]
keywords = ["actix", "localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
readme = "README.md"


[lib]
name = "fi18n"
path = "src/lib.rs"

[dependencies]
walkdir = "2.3"
unic-langid = "0.9"
fluent-bundle = { version = "0.15" }
actix-web = { version = "4.1", default-features = false, features = ["macros"], optional = true }
intl-memoizer = "0.5"
fluent-langneg = "0.13"

[features]
default = ["with-title"]
actix-web4 = ["dep:actix-web"]
with-title = []


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
