[package]
name = "fi18n"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/dvdmgl/fi18n.git"
authors = ["David Miguel <dvdmgl@gmail.com>"]
keywords = ["actix", "localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
readme = "README.md"

[lib]
name = "fi18n"
path = "src/lib.rs"

[dependencies]
unic-langid = "0.9"
fluent-bundle = { version = "0.15" }
fluent-syntax = "0.11"
actix-web = { version = "4.2", default-features = false, features = ["cookies"], optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
intl-memoizer = "0.5"
fluent-langneg = "0.13"
thiserror = "1"
log = "0.4"
ahash = "0.8"

[features]
default = ["with-title"]
actix-web4 = ["dep:actix-web"]
with-title = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
actix-web = { version = "4.2", default-features = false, features = ["macros", "cookies"] }
